# FedLearning-Final

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: 1_FederatedAveraging.ipynb  2_FlowerFederatedLearning.ipynb  3_SCAFFOLD.ipynb  4_DataSharing.ipynb  5_iidVSnoniid.ipynb  6_Deep_Leakage_Gradients.ipynb  7_FedPerFlower.ipynb  8_HPC_guide_and_results.ipynb  FedPerFlower.ipynb  ToDo.txt
flower/flower-experiments/: README.md  clean_cvs.py  debug_job.sh  extract_history.py  flower_job.sh  flower_job_array.sh  pyproject.toml  scaffold_job.sh
flower/flower-experiments/flower_experiments/: __init__.py  client_app.py  pytorch_test.py  server_app.py  task.py
logs/lsf/: 25306075_1.err  25306075_1.out  25306075_10.err  25306075_10.out  25306075_11.err  25306075_11.out  25306075_12.err  25306075_12.out  25306075_2.err  25306075_2.out  25306075_3.err  25306075_3.out  25306075_4.err  25306075_4.out  25306075_5.err  25306075_5.out  25306075_6.err  25306075_6.out  25306075_7.err  25306075_7.out  25306075_8.err  25306075_8.out  25306075_9.err  25306075_9.out  25306075_combined_history.csv  25307051.err  25307051.out
src/fedlearn/: client.py  data_loader.py  model.py  server.py  strategies.py  utils.py
