[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-learning"
version = "0.1.0"
description = "A small package for experimenting with federated learning."
readme = "README.md"
authors = [
    { name="Euan Cortes" },
    { name="Lukas Raad" },
    { name="Philip Hohwy" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "flwr",
]

[project.urls]
Homepage = "https://github.com/EuanCortes/FedLearning-Final"
Repository = "https://github.com/EuanCortes/FedLearning-Final"
Issues = "https://github.com/EuanCortes/FedLearning-Final/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
