[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-experiments"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "philip"

[tool.flwr.app.components]
serverapp = "flower_experiments.server_app:app"
clientapp = "flower_experiments.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
fraction-fit = 1
fraction-evaluate = 0.5
num-partitions = 10
local-epochs = 5
learning-rate = 0.01
momentum = 0.0
weight-decay = 0.0
batch-size = 64

method = "fedavg"
partition-method = "iid"
num-shards-per-partition = 2
dirichlet-alpha = 0.5

cache-dir = "data"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.2
